--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-static": "^1.0.0-next.28"
+		"@sveltejs/adapter-netlify": "^1.0.0-next.51",
+		"@sveltejs/adapter-static": "^1.0.0-next.28",
+		"svelte2tsx": "^0.5.6",
+		"typescript": "^4.6.2"
 	}
 }
